--- a/app/src/main/res/layout/fragment_my_friends.xml
+++ b/app/src/main/res/layout/fragment_my_friends.xml
@@ -3,5 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Friends"
+        />
 </LinearLayout>
