Tambah Fragment +SELESAI BAB 2 RecyclerView+

--- a/app/src/main/res/layout/fragment_my_friends.xml
+++ b/app/src/main/res/layout/fragment_my_friends.xml
@@ -8,4 +8,9 @@
         android:layout_height="wrap_content"
         android:text="My Friends"
         />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listMyFriends"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"/>
 </LinearLayout>
